argocd-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:047249942995:certificate/8f67d709-2166-4671-a228-3d3b45b68d0d
    alb.ingress.kubernetes.io/group.name: eks-stag-poc
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: 200,302,301,404
    # alb.ingress.kubernetes.io/tags: eks-stag-poc=true
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: stag-ingress
  namespace: staging
spec:
  ingressClassName: alb
  rules:
  - host: frontend-app.cirrops.co
    http:
      paths:
      - backend:
          service:
            name: frontend-app
            port:
              number: 80
        path: /
        pathType: Prefix
